metadata/objects/Mobileconfig__c.object
<CustomObject>
    <fields>
        <fullName>Base64_App_Icon__c</fullName>
        <label>Base64 App Icon</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <inlineHelpText>Keep it short. This label will be displayed right under the app icon.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_URL__c</fullName>
        <label>Start URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mobileconfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>Mobileconfig</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mobileconfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobileconfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>